Added gitignore records
This folders will not be commited any more

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,3 @@
-scraper/15minutes.php
-scraper/details_count_cleaner.php
-scraper/hour.php
-scraper/details_count_getter.php
-scraper/index.php
-scraper/udptscraper.php
+scraper/
+application/logs/
+forum/cache/
